cluster/ci/config/prow/openshift/artifact-uploader.yaml
kind: List
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: artifact-uploader
    labels:
      app: prow
      component: artifact-uploader
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      matchLabels:
        app: prow
        component: artifact-uploader
    template:
      metadata:
        labels:
          app: prow
          component: artifact-uploader
      spec:
        serviceAccountName: artifact-uploader
        containers:
        - name: artifact-uploader
          image: gcr.io/k8s-prow/artifact-uploader:v20190319-17068b0
          args:
          - --num-workers=20
          - --prow-job-ns=ci
          - --path-strategy=single
          - --default-org=openshift
          - --default-repo=origin
          - --gcs-path=gs://origin-ci-test/
          - --gcs-credentials-file=/secrets/gcs/service-account.json
          - --dry-run=false
          volumeMounts:
          - name: gcs-credentials
            mountPath: /secrets/gcs
            readOnly: true
        volumes:
        - name: gcs-credentials
          secret:
            secretName: gce-sa-credentials-gcs-publisher
