cluster/ci/config/prow/openshift/horologium.yaml
kind: List
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: horologium
    labels:
      app: prow
      component: horologium
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      matchLabels:
        app: prow
        component: horologium
    template:
      metadata:
        labels:
          app: prow
          component: horologium
      spec:
        serviceAccountName: horologium
        containers:
        - name: horologium
          args:
          - --job-config-path=/etc/job-config
          - --dry-run=false
          image: gcr.io/k8s-prow/horologium:v20190319-17068b0
          volumeMounts:
          - name: config
            mountPath: /etc/config
            readOnly: true
          - name: job-config-misc
            mountPath: /etc/job-config/misc
            readOnly: true
          - name: job-config-master
            mountPath: /etc/job-config/master
            readOnly: true
          - name: job-config-3x
            mountPath: /etc/job-config/3.x
            readOnly: true
          - name: job-config-40
            mountPath: /etc/job-config/4.0
            readOnly: true
        volumes:
        - name: config
          configMap:
            name: config
        - name: job-config-misc
          configMap:
            name: job-config-misc
        - name: job-config-master
          configMap:
            name: job-config-master
        - name: job-config-3x
          configMap:
            name: job-config-3.x
        - name: job-config-40
          configMap:
            name: job-config-4.0
