cluster/ci/config/prow/openshift/cherrypick.yaml
kind: List
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: cherrypick
  spec:
    selector:
      app: prow
      component: cherrypick
    ports:
    - port: 80
      targetPort: 8888
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: cherrypick
    labels:
      app: prow
      component: cherrypick
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      matchLabels:
        app: prow
        component: cherrypick
    template:
      metadata:
        labels:
          app: prow
          component: cherrypick
      spec:
        containers:
        - name: cherrypick
          image: gcr.io/k8s-prow/cherrypicker:v20190319-17068b0
          args:
          - --dry-run=false
          ports:
            - name: http
              containerPort: 8888
          volumeMounts:
          - name: hmac
            mountPath: /etc/webhook
            readOnly: true
          - name: oauth
            mountPath: /etc/github
            readOnly: true
          - name: tmp
            mountPath: /tmp
        volumes:
        - name: hmac
          secret:
            secretName: github-webhook-credentials
        - name: oauth
          secret:
            secretName: github-credentials-openshift-cherrypick-robot
        - name: tmp
          emptyDir: {}
