cluster/ci/config/prow/openshift/ghproxy.yaml
kind: List
apiVersion: v1
items:
- kind: PersistentVolumeClaim
  apiVersion: v1
  metadata:
    labels:
      app: prow
      component: ghproxy
    name: ghproxy
  spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 20Gi
    storageClassName: ssd
- apiVersion: v1
  kind: Service
  metadata:
    labels:
      app: prow
      component: ghproxy
    name: ghproxy
  spec:
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8888
    selector:
      app: prow
      component: ghproxy
    type: NodePort
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: ghproxy
    labels:
      app: prow
      component: ghproxy
  spec:
    replicas: 1
    template:
      metadata:
        labels:
          app: prow
          component: ghproxy
      spec:
        containers:
        - name: ghproxy
          image: gcr.io/k8s-prow/ghproxy:v20190319-17068b0
          imagePullPolicy: Always
          args:
          - --cache-dir=/cache
          - --cache-sizeGB=19
          - --push-gateway=pushgateway
          - --push-gateway-interval=30s
          ports:
          - containerPort: 8888
          volumeMounts:
          - name: cache
            mountPath: /cache
        volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: ghproxy
