cluster/ci/config/prow/openshift/jenkins_operator.yaml
kind: List
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: jenkins-operator
    annotations:
      prometheus.io/scrape: "true"
  spec:
    selector:
      app: prow
      component: jenkins-operator
    ports:
    - port: 80
      targetPort: 8080
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: jenkins-operator
    labels:
      app: prow
      component: jenkins-operator
  spec:
    # Do not scale up.
    replicas: 1
    revisionHistoryLimit: 2
    strategy:
      type: Recreate
    selector:
      matchLabels:
        app: prow
        component: jenkins-operator
    template:
      metadata:
        labels:
          app: prow
          component: jenkins-operator
      spec:
        serviceAccountName: jenkins-operator
        containers:
        - name: jenkins-operator
          image: gcr.io/k8s-prow/jenkins-operator:v20190319-17068b0
          args:
          - --jenkins-url=https://ci.openshift.redhat.com/jenkins
          - --jenkins-user=openshift-ci-robot
          - --jenkins-token-file=/etc/jenkins/password
          - --github-token-path=/etc/github/oauth
          - --label-selector=master=ci.openshift.redhat.com
          - --config-path=/etc/config/config.yaml
          - --job-config-path=/etc/job-config
          - --dry-run=false
          ports:
          - name: logs
            containerPort: 8080
          volumeMounts:
          - mountPath: /etc/jenkins
            name: jenkins
            readOnly: true
          - name: oauth
            mountPath: /etc/github
            readOnly: true
          - name: config
            mountPath: /etc/config
            readOnly: true
          - name: job-config-misc
            mountPath: /etc/job-config/misc
            readOnly: true
          - name: job-config-master
            mountPath: /etc/job-config/master
            readOnly: true
          - name: job-config-3x
            mountPath: /etc/job-config/3.x
            readOnly: true
          - name: job-config-40
            mountPath: /etc/job-config/4.0
            readOnly: true
        volumes:
        - name: jenkins
          secret:
            defaultMode: 420
            secretName: jenkins-credentials-ci.openshift.redhat.com
        - name: oauth
          secret:
            secretName: github-credentials-openshift-ci-robot
        - name: config
          configMap:
            name: config
        - name: job-config-misc
          configMap:
            name: job-config-misc
        - name: job-config-master
          configMap:
            name: job-config-master
        - name: job-config-3x
          configMap:
            name: job-config-3.x
        - name: job-config-40
          configMap:
            name: job-config-4.0

- apiVersion: v1
  kind: Service
  metadata:
    name: jenkins-dev-operator
    annotations:
      prometheus.io/scrape: "true"
  spec:
    selector:
      app: prow
      component: jenkins-dev-operator
    ports:
    - port: 80
      targetPort: 8080
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: jenkins-dev-operator
    labels:
      app: prow
      component: jenkins-dev-operator
  spec:
    # Do not scale up.
    replicas: 1
    revisionHistoryLimit: 2
    strategy:
      type: Recreate
    selector:
      matchLabels:
        app: prow
        component: jenkins-dev-operator
    template:
      metadata:
        labels:
          app: prow
          component: jenkins-dev-operator
      spec:
        serviceAccountName: jenkins-operator
        containers:
        - name: jenkins-operator
          image: gcr.io/k8s-prow/jenkins-operator:v20190319-17068b0
          args:
          - --jenkins-url=https://ci.dev.openshift.redhat.com:8443/jenkins
          - --jenkins-user=openshift-ci-robot
          - --jenkins-token-file=/etc/jenkins/password
          - --github-token-path=/etc/github/oauth
          - --label-selector=master=ci.dev.openshift.redhat.com
          - --cert-file=/etc/jenkins/cert.pem
          - --key-file=/etc/jenkins/key.pem
          - --ca-cert-file=/etc/jenkins/ca.pem
          - --csrf-protect=true
          - --dry-run=false
          - --job-config-path=/etc/job-config
          ports:
          - name: logs
            containerPort: 8080
          volumeMounts:
          - mountPath: /etc/jenkins
            name: jenkins
            readOnly: true
          - name: oauth
            mountPath: /etc/github
            readOnly: true
          - name: config
            mountPath: /etc/config
            readOnly: true
          - name: job-config-misc
            mountPath: /etc/job-config/misc
            readOnly: true
          - name: job-config-master
            mountPath: /etc/job-config/master
            readOnly: true
          - name: job-config-3x
            mountPath: /etc/job-config/3.x
            readOnly: true
          - name: job-config-40
            mountPath: /etc/job-config/4.0
            readOnly: true
        volumes:
        - name: jenkins
          secret:
            defaultMode: 420
            secretName: jenkins-credentials-ci.dev.openshift.redhat.com
        - name: oauth
          secret:
            secretName: github-credentials-openshift-ci-robot
        - name: config
          configMap:
            name: config
        - name: job-config-misc
          configMap:
            name: job-config-misc
        - name: job-config-master
          configMap:
            name: job-config-master
        - name: job-config-3x
          configMap:
            name: job-config-3.x
        - name: job-config-40
          configMap:
            name: job-config-4.0

- apiVersion: v1
  kind: Service
  metadata:
    name: kata-jenkins-operator
    annotations:
      prometheus.io/scrape: "true"
  spec:
    selector:
      app: prow
      component: kata-jenkins-operator
    ports:
    - port: 80
      targetPort: 8080
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: kata-jenkins-operator
    labels:
      app: prow
      component: kata-jenkins-operator
  spec:
    # Do not scale up.
    replicas: 1
    revisionHistoryLimit: 2
    strategy:
      type: Recreate
    selector:
      matchLabels:
        app: prow
        component: kata-jenkins-operator
    template:
      metadata:
        labels:
          app: prow
          component: kata-jenkins-operator
      spec:
        serviceAccountName: jenkins-operator
        containers:
        - name: kata-jenkins-operator
          image: gcr.io/k8s-prow/jenkins-operator:v20190319-17068b0
          args:
          - --jenkins-url=http://jenkins.katacontainers.io/
          - --jenkins-user=katabuilder
          - --jenkins-token-file=/etc/jenkins/password
          - --github-token-path=/etc/github/oauth
          - --label-selector=master=jenkins.katacontainers.io
          - --csrf-protect=true
          - --dry-run=false
          - --job-config-path=/etc/job-config
          ports:
          - name: logs
            containerPort: 8080
          volumeMounts:
          - mountPath: /etc/jenkins
            name: jenkins
            readOnly: true
          - name: oauth
            mountPath: /etc/github
            readOnly: true
          - name: config
            mountPath: /etc/config
            readOnly: true
          - name: job-config-misc
            mountPath: /etc/job-config/misc
            readOnly: true
          - name: job-config-master
            mountPath: /etc/job-config/master
            readOnly: true
          - name: job-config-3x
            mountPath: /etc/job-config/3.x
            readOnly: true
          - name: job-config-40
            mountPath: /etc/job-config/4.0
            readOnly: true
        volumes:
        - name: jenkins
          secret:
            defaultMode: 420
            secretName: jenkins-credentials-kata-jenkins-ci.westus2.cloudapp.azure.com
        - name: oauth
          secret:
            secretName: github-credentials-openshift-ci-robot
        - name: config
          configMap:
            name: config
        - name: job-config-misc
          configMap:
            name: job-config-misc
        - name: job-config-master
          configMap:
            name: job-config-master
        - name: job-config-3x
          configMap:
            name: job-config-3.x
        - name: job-config-40
          configMap:
            name: job-config-4.0
