cluster/ci/config/prow/openshift/refresh.yaml
kind: List
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: refresh
  spec:
    selector:
      app: prow
      component: refresh
    ports:
    - port: 80
      targetPort: 8888
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: refresh
    labels:
      app: prow
      component: refresh
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      matchLabels:
        app: prow
        component: refresh
    template:
      metadata:
        labels:
          app: prow
          component: refresh
      spec:
        containers:
        - name: refresh
          image: gcr.io/k8s-prow/refresh:v20190319-17068b0
          args:
          - --github-token-path=/etc/github/oauth
          - --hmac-secret-file=/etc/webhook/hmac
          - --dry-run=false
          - --prow-url=https://deck-ci.svc.ci.openshift.org
          ports:
            - name: http
              containerPort: 8888
          volumeMounts:
          - name: hmac
            mountPath: /etc/webhook
            readOnly: true
          - name: oauth
            mountPath: /etc/github
            readOnly: true
          - name: config
            mountPath: /etc/config
            readOnly: true
        volumes:
        - name: hmac
          secret:
            secretName: github-webhook-credentials
        - name: oauth
          secret:
            secretName: github-credentials-openshift-ci-robot
        - name: config
          configMap:
            name: config
