cluster/ci/config/prow/openshift/tide.yaml
kind: List
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: tide
  spec:
    selector:
      app: prow
      component: tide
    ports:
    - port: 80
      targetPort: 8888
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: tide
    labels:
      app: prow
      component: tide
  spec:
    # Do not scale up.
    replicas: 1
    strategy:
      type: Recreate
    selector:
      matchLabels:
        app: prow
        component: tide
    template:
      metadata:
        labels:
          app: prow
          component: tide
      spec:
        serviceAccountName: tide
        containers:
        - name: tide
          image: gcr.io/k8s-prow/tide:v20190319-17068b0
          args:
          - --dry-run=false
          - --github-token-path=/etc/github/oauth
          - --job-config-path=/etc/job-config
          - --github-endpoint=http://ghproxy
          ports:
          - name: http
            containerPort: 8888
          volumeMounts:
          - name: oauth
            mountPath: /etc/github
            readOnly: true
          - name: config
            mountPath: /etc/config
            readOnly: true
          - name: job-config-misc
            mountPath: /etc/job-config/misc
            readOnly: true
          - name: job-config-master
            mountPath: /etc/job-config/master
            readOnly: true
          - name: job-config-3x
            mountPath: /etc/job-config/3.x
            readOnly: true
          - name: job-config-40
            mountPath: /etc/job-config/4.0
            readOnly: true
          - name: tmp
            mountPath: /tmp
        volumes:
        - name: oauth
          secret:
            secretName: github-credentials-openshift-merge-robot
        - name: config
          configMap:
            name: config
        - name: job-config-misc
          configMap:
            name: job-config-misc
        - name: job-config-master
          configMap:
            name: job-config-master
        - name: job-config-3x
          configMap:
            name: job-config-3.x
        - name: job-config-40
          configMap:
            name: job-config-4.0
        - name: tmp
          emptyDir: {}
