cluster/ci/config/prow/openshift/tot.yaml
kind: List
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: tot
  spec:
    selector:
      app: prow
      component: tot
    ports:
    - port: 80
      targetPort: 8888
    type: ClusterIP
- kind: PersistentVolumeClaim
  apiVersion: v1
  metadata:
    labels:
      app: prow
      component: tot
    name: tot-storage
  spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 1Gi
    storageClassName: ssd
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: tot
    labels:
      app: prow
      component: tot
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      matchLabels:
        app: prow
        component: tot
    template:
      metadata:
        labels:
          app: prow
          component: tot
      spec:
        containers:
        - name: tot
          image: gcr.io/k8s-prow/tot:v20190319-17068b0
          args:
          - --config-path=/etc/config/config.yaml
          - --fallback=true
          - --fallback-bucket=http://gcsweb/gcs/origin-ci-test
          - --storage=/storage/tot.json
          - --job-config-path=/etc/job-config
          ports:
            - name: http
              containerPort: 8888
          volumeMounts:
          - name: tot-volume
            mountPath: /storage
          - name: config
            mountPath: /etc/config
          - name: job-config-misc
            mountPath: /etc/job-config/misc
            readOnly: true
          - name: job-config-master
            mountPath: /etc/job-config/master
            readOnly: true
          - name: job-config-3x
            mountPath: /etc/job-config/3.x
            readOnly: true
          - name: job-config-40
            mountPath: /etc/job-config/4.0
            readOnly: true
        volumes:
        - name: tot-volume
          persistentVolumeClaim:
            claimName: tot-storage
        - name: config
          configMap:
            name: config
        - name: job-config-misc
          configMap:
            name: job-config-misc
        - name: job-config-master
          configMap:
            name: job-config-master
        - name: job-config-3x
          configMap:
            name: job-config-3.x
        - name: job-config-40
          configMap:
            name: job-config-4.0
