cluster/ci/config/prow/openshift/hook.yaml
kind: List
apiVersion: v1
items:
- apiVersion: v1
  kind: Route
  metadata:
    name: hook
  spec:
    path: /hook
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: hook
- apiVersion: v1
  kind: Service
  metadata:
    name: hook
    annotations:
      prometheus.io/scrape: "true"
      prometheus.io/port: "8888"
  spec:
    selector:
      app: prow
      component: hook
    ports:
    - port: 8888
    type: ClusterIP
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: hook
    labels:
      app: prow
      component: hook
  spec:
    replicas: 2
    revisionHistoryLimit: 2
    selector:
      matchLabels:
        app: prow
        component: hook
    template:
      metadata:
        labels:
          app: prow
          component: hook
      spec:
        serviceAccountName: hook
        containers:
        - name: hook
          image: gcr.io/k8s-prow/hook:v20190319-17068b0
          args:
          - --github-token-path=/etc/github/oauth
          - --hmac-secret-file=/etc/webhook/hmac
          - --dry-run=false
          - --job-config-path=/etc/job-config
          - --github-endpoint=http://ghproxy
          ports:
            - name: http
              containerPort: 8888
          volumeMounts:
          - name: hmac
            mountPath: /etc/webhook
            readOnly: true
          - name: oauth
            mountPath: /etc/github
            readOnly: true
          - name: config
            mountPath: /etc/config
            readOnly: true
          - name: plugins
            mountPath: /etc/plugins
            readOnly: true
          - name: tmp
            mountPath: /tmp
          - name: job-config-misc
            mountPath: /etc/job-config/misc
            readOnly: true
          - name: job-config-master
            mountPath: /etc/job-config/master
            readOnly: true
          - name: job-config-3x
            mountPath: /etc/job-config/3.x
            readOnly: true
          - name: job-config-40
            mountPath: /etc/job-config/4.0
            readOnly: true
        volumes:
        - name: hmac
          secret:
            secretName: github-webhook-credentials
        - name: oauth
          secret:
            secretName: github-credentials-openshift-ci-robot
        - name: config
          configMap:
            name: config
        - name: plugins
          configMap:
            name: plugins
        - name: job-config-misc
          configMap:
            name: job-config-misc
        - name: job-config-master
          configMap:
            name: job-config-master
        - name: job-config-3x
          configMap:
            name: job-config-3.x
        - name: job-config-40
          configMap:
            name: job-config-4.0
        - name: tmp
          emptyDir: {}
